<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/tv_current"
                    android:src="@drawable/ic_check" />

                <TextView
                    android:id="@+id/tv_current"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/_0"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:text="그림에 맞는 단어를 고르세요"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:ignore="UnusedAttribute" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    app:cardElevation="10dp"
                    app:cardCornerRadius="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/image_id"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/img_27"
                            app:layout_constraintDimensionRatio="H,1:1"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="ContentDescription,RtlHardcoded" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:ignore="NestedWeights">

                <FrameLayout
                    android:id="@+id/layoutA"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_a"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:autoSizeMaxTextSize="20sp"
                        android:autoSizeTextType="uniform"
                        android:background="@drawable/back_answer"
                        android:backgroundTint="@color/teal_700"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="A"
                        android:textColor="@color/white"
                        tools:ignore="UnusedAttribute" />

                    <ImageView
                        android:id="@+id/img_A"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/img_resultA"
                        android:layout_width="30dp"
                        android:layout_height="50dp"
                        android:layout_gravity="end"
                        android:layout_marginEnd="5dp"
                        android:visibility="gone" />

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/layoutB"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_b"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:autoSizeMaxTextSize="20sp"
                        android:autoSizeTextType="uniform"
                        android:background="@drawable/back_answer"
                        android:backgroundTint="@color/purple_700"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="B"
                        android:textColor="@color/white"
                        tools:ignore="UnusedAttribute" />


                    <ImageView
                        android:id="@+id/img_B"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/img_resultB"
                        android:layout_width="30dp"
                        android:layout_height="50dp"
                        android:layout_gravity="end"
                        android:layout_marginEnd="5dp"
                        android:visibility="gone" />

                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <FrameLayout
                    android:id="@+id/layoutC"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_c"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:autoSizeMaxTextSize="20sp"
                        android:autoSizeTextType="uniform"
                        android:background="@drawable/back_answer"
                        android:backgroundTint="@color/purple_500"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="C"
                        android:textColor="@color/white"
                        tools:ignore="UnusedAttribute" />

                    <ImageView
                        android:id="@+id/img_C"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/img_resultC"
                        android:layout_width="30dp"
                        android:layout_height="50dp"
                        android:layout_gravity="end"
                        android:layout_marginEnd="5dp"
                        android:visibility="gone" />

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/layoutD"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_d"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:autoSizeMaxTextSize="20sp"
                        android:autoSizeTextType="uniform"
                        android:background="@drawable/back_answer"
                        android:backgroundTint="@color/purple_200"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="D"
                        android:textColor="@color/white"
                        tools:ignore="UnusedAttribute" />

                    <ImageView
                        android:id="@+id/img_D"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/img_resultD"
                        android:layout_width="30dp"
                        android:layout_height="50dp"
                        android:layout_gravity="end"
                        android:layout_marginEnd="5dp"
                        android:visibility="gone" />

                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_back" />

                <TextView
                    android:id="@+id/tv_counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="01"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/of"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/_73"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/img_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/ic_arrow_next" />

                <ImageView
                    android:id="@+id/img_volume"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_volume_up" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/start_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:text="@string/quizni_boshlash_uchun_startni_bosing"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/quiz_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/back_answer"
                android:backgroundTint="@color/teal_700"
                android:paddingHorizontal="40dp"
                android:paddingVertical="20dp"
                android:text="@string/start"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="bottom"
            android:background="@color/teal_700" />

    </FrameLayout>
</FrameLayout>